<resources>
    <string name="app_name">Calculater</string>
    <string name="factorial">!</string>
    <string name="pow">^</string>
    <string name="sqrt">√</string>
    <string name="pi">п</string>
    <string name="clear_all">C</string>
    <string name="sin">sin</string>
    <string name="left_brace">(</string>
    <string name="right_brace">)</string>
    <string name="exponenta">e</string>
    <string name="erase">←</string>
    <string name="cos">cos</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="div">/</string>
    <string name="tan">tg</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="dot">.</string>
    <string name="ln">ln</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="log">lg</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="change_sign">+/-</string>
    <string name="plus">+</string>
</resources>
