<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zlata.calculater.MainActivity"
    android:textColor="@android:color/white"
    android:background="#696969">

    <EditText
        android:id="@+id/output_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Input"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/input_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2"
        android:textColor="#ffffff"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/input_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/factorial_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_field"
        app:layout_constraintVertical_weight="3"
        tools:text="Output"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/factorial_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/factorial"
        app:layout_constraintBottom_toTopOf="@+id/sin_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/power_button"
        app:layout_constraintTop_toBottomOf="@+id/input_field"
        app:layout_constraintVertical_weight="3"
        android:background="#808080"
        />

   <Button
       android:id="@+id/power_button"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:text="@string/pow"
       app:layout_constraintBottom_toTopOf="@+id/sin_button"
       app:layout_constraintLeft_toRightOf="@+id/factorial_button"
       app:layout_constraintRight_toLeftOf="@+id/sqrt_button"
       app:layout_constraintTop_toBottomOf="@+id/input_field"
       app:layout_constraintVertical_weight="3"
       android:background="#808080"
       />

    <Button
        android:id="@+id/sqrt_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sqrt"
        app:layout_constraintBottom_toTopOf="@+id/sin_button"
        app:layout_constraintLeft_toRightOf="@+id/power_button"
        app:layout_constraintRight_toLeftOf="@+id/pi_button"
        app:layout_constraintTop_toBottomOf="@+id/input_field"
        app:layout_constraintVertical_weight="3"
        android:background="#808080"
        />

    <Button
        android:id="@+id/pi_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pi"
        app:layout_constraintBottom_toTopOf="@+id/sin_button"
        app:layout_constraintLeft_toRightOf="@+id/sqrt_button"
        app:layout_constraintRight_toLeftOf="@+id/clear_all_button"
        app:layout_constraintTop_toBottomOf="@+id/input_field"
        app:layout_constraintVertical_weight="3"
        android:background="#808080"
        />

    <Button
        android:id="@+id/clear_all_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear_all"
        app:layout_constraintBottom_toTopOf="@+id/sin_button"
        app:layout_constraintLeft_toRightOf="@+id/pi_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_field"
        app:layout_constraintVertical_weight="3"
        android:background="#808080"
        />

    <Button
        android:id="@+id/sin_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sin"
        app:layout_constraintBottom_toTopOf="@+id/cos_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/left_brace_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/factorial_button"
        android:background="#808080"
        />

    <Button
        android:id="@+id/left_brace_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/left_brace"
        app:layout_constraintBottom_toTopOf="@id/cos_button"
        app:layout_constraintLeft_toRightOf="@+id/sin_button"
        app:layout_constraintRight_toLeftOf="@+id/right_brace_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/factorial_button"
        android:background="#808080"
        />

    <Button
        android:id="@+id/right_brace_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/right_brace"
        app:layout_constraintBottom_toTopOf="@+id/cos_button"
        app:layout_constraintLeft_toRightOf="@+id/left_brace_button"
        app:layout_constraintRight_toLeftOf="@+id/exponenta_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/factorial_button"
        android:background="#808080"
        />

    <Button
        android:id="@+id/exponenta_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/exponenta"
        app:layout_constraintBottom_toTopOf="@+id/cos_button"
        app:layout_constraintLeft_toRightOf="@+id/right_brace_button"
        app:layout_constraintRight_toLeftOf="@+id/erase_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/factorial_button"
        android:background="#808080"
        />

    <Button
        android:id="@+id/erase_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/erase"
        app:layout_constraintBottom_toTopOf="@+id/cos_button"
        app:layout_constraintLeft_toRightOf="@+id/exponenta_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/factorial_button"
        android:background="#808080"
        />

    <Button
        android:id="@+id/cos_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cos"
        app:layout_constraintBottom_toTopOf="@+id/tan_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/seven_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/sin_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/seven_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/tan_button"
        app:layout_constraintLeft_toRightOf="@+id/cos_button"
        app:layout_constraintRight_toLeftOf="@+id/eight_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/sin_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/eight_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/tan_button"
        app:layout_constraintLeft_toRightOf="@+id/seven_button"
        app:layout_constraintRight_toLeftOf="@+id/nine_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/sin_button"
        android:background="#808080"
        />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/tan_button"
        app:layout_constraintLeft_toRightOf="@+id/eight_button"
        app:layout_constraintRight_toLeftOf="@+id/div_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/sin_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/div_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/div"
        app:layout_constraintBottom_toTopOf="@+id/tan_button"
        app:layout_constraintLeft_toRightOf="@+id/nine_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/sin_button"
        android:background="#808080"/>
    
    <Button
        android:id="@+id/tan_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tan"
        app:layout_constraintBottom_toTopOf="@+id/ln_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/four_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/cos_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/four_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/ln_button"
        app:layout_constraintLeft_toRightOf="@+id/tan_button"
        app:layout_constraintRight_toLeftOf="@+id/five_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/cos_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/five_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/ln_button"
        app:layout_constraintLeft_toRightOf="@+id/four_button"
        app:layout_constraintRight_toLeftOf="@+id/six_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/cos_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/six_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/ln_button"
        app:layout_constraintLeft_toRightOf="@+id/five_button"
        app:layout_constraintRight_toLeftOf="@+id/star_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/cos_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/star_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/star"
        app:layout_constraintBottom_toTopOf="@+id/ln_button"
        app:layout_constraintLeft_toRightOf="@+id/six_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/cos_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/ln_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ln"
        app:layout_constraintBottom_toTopOf="@+id/log_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/one_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/tan_button"
        android:background="#808080"/>
    
    <Button
        android:id="@+id/one_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/log_button"
        app:layout_constraintLeft_toRightOf="@+id/ln_button"
        app:layout_constraintRight_toLeftOf="@+id/two_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/tan_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/two_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/log_button"
        app:layout_constraintLeft_toRightOf="@+id/one_button"
        app:layout_constraintRight_toLeftOf="@+id/three_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/tan_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/three_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/log_button"
        app:layout_constraintLeft_toRightOf="@+id/two_button"
        app:layout_constraintRight_toLeftOf="@+id/minus_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/tan_button"
        android:background="#808080"
        />
    
    <Button
        android:id="@+id/minus_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/log_button"
        app:layout_constraintLeft_toRightOf="@+id/three_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/tan_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/log_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/zero_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/ln_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/zero_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/log_button"
        app:layout_constraintRight_toLeftOf="@+id/dot_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/ln_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/dot_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/zero_button"
        app:layout_constraintRight_toLeftOf="@+id/change_sign_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/ln_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/change_sign_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/change_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/dot_button"
        app:layout_constraintRight_toLeftOf="@+id/plus_button"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/ln_button"
        android:background="#808080"/>

    <Button
        android:id="@+id/plus_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/change_sign_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@+id/ln_button"
        android:background="#808080"/>

</android.support.constraint.ConstraintLayout>
